# GCurve

./: .gitignore  CMakeLists.txt  README.md
dev/: CMakeLists.txt
dev/include/gcurve/: GluedCurve.h  GluedCurveRange.h  GluedCurveSeed.h  GluedLinelsIterator.h  GluedLinelsIterator.hpp
dev/src/: GluedCurve.cpp
examples/: CMakeLists.txt  countGCurves.cpp  drawGCurves.cpp  main.cpp
examples/input_images/: square.pgm
ext-projects/: ExtProjects.cmake
include/gcurve/: GluedCurve.h  GluedCurveRange.h  GluedCurveSeed.h  GluedLinelsIterator.h  GluedLinelsIterator.hpp
lab/examples/: CMakeLists.txt
lab/examples/drawGCurves/: CMakeLists.txt  drawGCurves.cpp
lab/test/: CMakeLists.txt  main.cpp
lab/test/check_data/correcteness/: square.txt
lab/test/include/gcurve/test/: testCorrecteness.h  testExecution.h
lab/test/include/gcurve/test/control/: GCAttributeReader.h  GCAttributeWriter.h  GCAttributeWriter.hpp
lab/test/include/gcurve/test/utils/: CurvesExtractor.h  EstimateCurvature.h
lab/test/src/: testCorrecteness.cpp  testExecution.cpp
lab/test/src/control/: GCAttributeReader.cpp  GCAttributeWriter.cpp
modules/core/: CMakeLists.txt
modules/core/include/gcurve/: GluedCurve.h  Iterator.h  Iterator.hpp  Range.h  Seed.h
modules/core/src/: GluedCurve.cpp  Range.cpp
modules/utils/: CMakeLists.txt
modules/utils/include/gcurve/utils/: displayUtils.h  displayUtils.hpp  iteratorUtils.h  kspaceUtils.h  kspaceUtils.hpp
modules/utils/src/: kspaceUtils.cpp
src/: GluedCurve.cpp  GluedCurveRange.cpp
test/: CMakeLists.txt  main.cpp
test/check_data/correcteness/: square.pgm.txt  square.txt
test/include/: testCorrecteness.h  testExecution.h  testUtils.h  testUtils.hpp
test/include/gcurve/test/: testCorrecteness.h  testExecution.h
test/include/gcurve/test/control/: GCAttributeWriter.hpp
test/include/gcurve/test/model/: GCAttributes.h
test/include/gcurve/test/utils/: CurvesExtractor.h  EstimateCurvature.h
test/src/: testCorrecteness.cpp  testExecution.cpp  testUtils.cpp
test/src/model/: GCAttributes.cpp
test/src/utils/: CurvesExtractor.cpp  EstimateCurvature.cpp
